# solana-hello

./: Cargo.toml  README.md
client/: main.ts  package.json  solanaHello.ts  utils.ts
src/: lib.rs
